testsuite/tests/typecheck/should_fail/T12529.stderr

T12529.hs:5:5: error: Variable not in scope: p
